# clinvar_ETL

./: .gitignore  Pipfile  README.md  __init__.py  __main__.py  clinvar_ETL_constants.py  clinvar_ETL_package.yml  clinvar_caller.py  clinvar_datapull.py  clinvar_datapull_caller.py  clinvar_google_sheet.py  clinvar_parse.py  clinvar_parse_deprecated.py  clinvar_utilities.py  decode_json_old.py  drive_api.py  example_clinvar_xml  main.py  my_numbers.txt  patterns.py  pyproject.toml  pyproject_old.toml  risk_alleles_project  setup.py  test.pickle  test.txt  test.xml  test_drive_update.py  test_records.txt
clinvar_ETL/: __init__.py  clinvar_datapull.py  clinvar_parse.py  clinvar_utilities.py  drive_api.py  main.py
clinvar_ETL/drive_api/: drive_api.py
clinvar_ETL/utilities/: clinvar_utilities.py  glaucoma_genes.csv  regex_patterns.py
datafiles/: avagen2_genes.csv  blocklist_pmids.csv  glaucoma_genes.csv
datapull/: __init__.py  clinvar_datapull.py
drive_api/: __init__.py
parse/: __init__.py  clinvar_parse.py
utilities/: __init__.py
