[tool.poetry]
name = "clinvar_etl"
version = "0.1.0"
description = "Pull and parse ClinVar Variation records"
authors = ["David Tran <davhutra@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/DHTran/clinvar_projects/tree/main/clinvar_ETL"
keywords = ["ETL", "ClinVar", "Variation"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.1.4"
jupyterlab = "^3.1.12"
python-dotenv = "^0.19.0"
simplejson = "^3.17.5"
beautifulsoup4 = "^4.10.0"
biopython = "^1.79"
lxml = "^4.6.3"
google-api-python-client = "^2.24.0"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"
six = "^1.16.0"
hail = "^0.2.81"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
