[tool.poetry]
name = "clinvar_etl"
version = "0.1.0"
description = ""
authors = ["David Tran <davhutra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
simplejson = "^3.17.6"
beautifulsoup4 = "^4.11.1"
biopython = "^1.79"
lxml = "^4.9.1"
google-api-python-client = "^2.54.0"
google-auth-oauthlib = "^0.5.2"
google-auth-httplib2 = "^0.1.0"
pandas = "^1.4.3"
jupyterlab = "^3.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
